2007-06-05  Inge Wallin  <inge@lysator.liu.se>

	Krazy 12: Check for proper include directives
	* src/lib/marble_export.h: Use <QtCore/QtGlobal> instead of "..."

	Introduce d-pointer in MarbleModel
	* src/lib/MarbleModel.cpp (d): new member
	* src/lib/MarbleModel.cpp (MarbleModelPrivate): new class
	(rest of MarbleModel.cpp): use d-> everywhere
	This also fixes a lot of Krazy 13.issues: 
	  inline functions in public classes.
	
2007-06-05  Torsten Rahn  <rahn@kde.org>

    * src/lib/LegendBrowser.{h,cpp}: More changes in the 
    LegendBrowser to avoid flicker and several 
    additional attributes which are now supported.

    small TODOs: Make LegendBrowser a Designer Plugin
    and further improve its HTML ... 

    * src/lib/placemarkpainter.{h,cpp}: made cities and 
    terrain accessible from MarbleWidget.

2007-06-05  Inge Wallin  <inge@lysator.liu.se>

	Krazy 21: Check for signals: and slots:
	* src/lib/*.h: switch Q_SIGNALS: for signals: and Q_SLOTS: for slots:
	(This fixes 31 issues in one swoop!)
	
	Make it build again
	* src/lib/LegendBrowser.h (LegendBrowser): Export the class, since
	it's part of a library.

2007-06-05  Torsten Rahn  <rahn@kde.org>

	* src/lib/LegendBrowser.{h,cpp}: Adding new Legend Browser 
	class that supports checkboxes.
	
	Works partially. I'm about to finish this now and 
	will add settings saving for the Qt and KDE frontend 
	right after.

2007-06-05  Inge Wallin  <inge@lysator.liu.se>

	Krazy: 17: Check for inappropriate pass-by-value function args
	* src/lib/kml/KMLFeature.{h,cpp}: Pass QStrings by const reference

	Krazy:  4: Check for an acceptable copyright
	Krazy: 14: Check for an acceptable license
	* src/lib/kml/KMLObject.{h,cpp}:  Add header w/ copyright and license
	* src/lib/kml/KMLFeature.{h,cpp}: Add header w/ copyright and license
	
	Krazy: 17: Check for inappropriate pass-by-value function args
	* src/lib/kml/KMLFeature.{h,cpp}: Pass QStrings by reference

2007-06-05  Torsten Rahn  <rahn@kde.org>
