@@ -17,7 +17,7 @@ Features
 Cleaning
  * Make the ChangeLog file follow the GNU format.                       DONE
  * No inline functions in the public classes                            INGE
-   - MarbleWidget                                                       --
+   - MarbleWidget                                                       done
    - MarbleModel                                                        done
    - MarbleControlBox                                                   --
  * d-pointerify the public classes                                      INGE
